--- a/src/formularios/frmProductosAgregar.form
+++ b/src/formularios/frmProductosAgregar.form
@@ -168,6 +168,7 @@
     <Component class="javax.swing.JTextField" name="txtCodBarraProductos">
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtCodBarraProductosActionPerformed"/>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtCodBarraProductosKeyPressed"/>
         <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtCodBarraProductosKeyTyped"/>
       </Events>
       <Constraints>
